--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-requests
-spotipy
-pytube
-youtube_search
+async-timeout==4.0.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
+idna==3.4
+pytube==15.0.0
+redis==4.6.0
+requests==2.31.0
+six==1.16.0
+spotipy==2.23.0
+urllib3==2.0.4
+youtube-search==2.1.2
